Fix for warnings in console