@@ -76,6 +76,10 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.xryzo11.discordbot.DiscordBot</mainClass>
+                                    <manifestEntries>
+                                        <Add-Opens>java.base/java.lang</Add-Opens>
+                                        <Multi-Release>true</Multi-Release>
+                                    </manifestEntries>
                                 </transformer>
                             </transformers>
                         </configuration>
